/cdc_hospitalizations/create.sql
/cdc_hospitalizations/increase_race_category_length.sql